# adx-mai2io-dll

./: Cargo.toml  README.md
adx-button-server-hid/: Cargo.toml
adx-button-server-hid/src/: main.rs
adx-button-server-io4/: Cargo.toml
adx-button-server-io4/src/: main.rs
adx-mai2io/: Cargo.toml
adx-mai2io/src/: mai2io.rs
pytests/: buttonTestHID.py  buttonTestIO4.py  touchTest.py
