[package]
edition = "2021"
name = "adx-button-server-hid"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
raw_sync = "0.1.5"
hidapi = "2.6.3"
shared_memory = "0.12.4"
tokio = {version = "1.28.0", features = ["full"]}
windows = "0.34.0"

[[bin]]
name = "adx-button-server-hid"
path = "src/main.rs"
